--- a/Project 1B - Portfolio Site/css/style.css
+++ b/Project 1B - Portfolio Site/css/style.css
@@ -2,13 +2,11 @@
   display: flex;
   flex-wrap: wrap;
   max-width: 850px;
-  margin: auto;
-  max-width: 100%;
   min-width: 400px;
+  margin: auto;
 }
 
 .header {
-  order: -1;
   width: 100%;
   border-bottom: 2px solid  #7d97ad;
   margin:0;
@@ -44,42 +42,30 @@ h3 {
 
 }
 
-.aboutme {
-  order: 0;
+.cover {
   width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.introduction {
-  order: 1;
-  width: 50%;
-  display: flex;
-  flex-wrap: wrap;
-  /* padding: 1em; */
-}
-
-.picture {
-  order: 2;
-  width: 50%;
-  max-width: 50%;
-  display: flex;
-  flex-wrap: wrap;
-  position: relative;
-  float: right;
-  overflow:hidden
-}
-
-.picture {
-  float: right;
+  padding: 10px;
 }
 
 .portfolio {
   font-family: "Roboto";
-  order: 3;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+}
+
+.featured-projects {
+  width: 100%;
+}
+
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.project {
+  width: 30%;
 }
 
 .image {
@@ -87,7 +73,7 @@ h3 {
   width: 200px;
   height: 200px;
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
   background-size: cover;
 }
 .p1 .image {
@@ -100,65 +86,8 @@ h3 {
   background-image: url("../img/portfolio.png");
 }
 
-.featured-projects {
-  width: 100%;
-}
-
-.project {
-  width: calc((100% - 10px)/3);
-  display: flex;
-  justify-content: space-between;
-  justify-content: center;
-  font-family: "Roboto";
-
-}
-
-.p1 , .p2 , .p3{
-  order: 4;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.link {
-  text-align: center;
-}
-
-@media screen and (max-width: 450px) {
-  .introduction {
-    width: 100%;
-    font-size: 24px;
-    text-align: center;
-  }
-  .picture {
-    width: 100%;
-    max-width: 100%;
-    align-items: center;
-  }
-
-  h2 {
-    text-align: center;
-  }
-  .p2 {
-    order: 5;
-  }
-
-  .p3 {
-    order: 5;
-  }
-  .project {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-
-  .image {
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 1em;
-  }
-  .link {
-    width: inherit;
-    text-align: center;
-  }
+a {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
