--- a/Project 1B - Portfolio Site/css/style.css
+++ b/Project 1B - Portfolio Site/css/style.css
@@ -37,14 +37,13 @@ h1 {
   padding-bottom: 0;
 }
 
-h3 {
+h3 h2 {
   font-size: 14px;
-
 }
 
 .cover {
   width: 100%;
-  padding: 10px;
+  padding-top: 10px;
 }
 
 .portfolio {
@@ -69,25 +68,66 @@ h3 {
 }
 
 .image {
-  width: 100%;
   width: 200px;
   height: 200px;
   display: flex;
   flex-wrap: wrap;
   background-size: cover;
 }
-.p1 .image {
-  background-image: url("../img/pixel.png");
-}
-.p2 .image {
-  background-image: url("../img/cv.png");
-}
-.p3 .image {
-  background-image: url("../img/portfolio.png");
+
+p {
+  text-transform: uppercase;
+  font-family: "Roboto";
+  font-weight: bold;
 }
 
 a {
   display: block;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-transform: lowercase;
+  font-style: italic;
+
+}
+
+@media screen and (max-width: 450px) {
+  .featured-projects {
+    text-align: center;
+  }
+
+  .project {
+    width: 100%;
+    margin: auto;
+    text-align: center;
+  }
+  .image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+
+  }
+  .portfolio img {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: auto;
+  }
+}
+
+@media screen and (min-width: 451px) and (max-width: 768px) {
+  .project {
+    width: 45%;
+    margin: 10px;
+    align-items: ;
+  }
+
+  .image {
+    width: 300px;
+    height: 300px;
+  }
+
+  .featured-projects {
+    text-align: center;
+  }
 }
