--- a/Project 1B - Portfolio Site/css/style.css
+++ b/Project 1B - Portfolio Site/css/style.css
@@ -1,9 +1,16 @@
+body {
+  width: 100%;
+}
+
 .container {
+  width: 100%;
+  min-width: 400px;
   display: flex;
   flex-wrap: wrap;
-  max-width: 850px;
-  min-width: 400px;
-  margin: auto;
+}
+
+* {
+  border: 2px dashed red !important;
 }
 
 .header {
@@ -12,41 +19,51 @@
   margin:0;
   padding:0;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .logo {
-  width: 20%;
+  width: 10%;
   padding: 1em;
 }
 
-.logo img {
+.logo > img {
   width: 50px;
+  align-self: center;
 }
 
 .name {
-  width: 80%;
-  float: right;
+  width: 70%;
+  margin-right: 1em;
 }
 
-h1 , h3{
+
+h1 {
+  margin-bottom: 0;
+  padding-bottom: 0;
   text-transform: uppercase;
   font-family: "Raleway";
   text-align: right;
 }
 
-h1 {
-  margin-bottom: 0;
-  padding-bottom: 0;
-}
-
-h3 h2 {
-  font-size: 14px;
+h3 {
+  text-transform: uppercase;
+  font-family: "Raleway";
+  text-align: right;
 }
 
 .cover {
   width: 100%;
   padding-top: 10px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.cover > img {
+  align-self: center;
+  max-width: 100%;
+  margin: auto;
 }
 
 .portfolio {
@@ -75,12 +92,11 @@ h3 h2 {
   height: 200px;
   display: flex;
   flex-wrap: wrap;
-  background-size: cover;
 }
 
 p {
   text-transform: uppercase;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-weight: bold;
 }
 
@@ -103,13 +119,14 @@ a {
     margin: auto;
     text-align: center;
   }
+
   .image {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
-
   }
+
   .portfolio img {
     display: flex;
     flex-wrap: wrap;
@@ -118,11 +135,11 @@ a {
   }
 }
 
-@media screen and (min-width: 451px) and (max-width: 768px) {
+@media screen and (min-width: 451px) and (max-width: 690px) {
   .project {
-    width: 45%;
-    margin: 10px;
-    align-items: ;
+    width: 100%;
+    margin: auto;
+    text-align: center;
   }
 
   .image {
@@ -130,7 +147,43 @@ a {
     height: 300px;
   }
 
+  .portfolio img {
+    align-items: center;
+    margin: auto;
+  }
+
   .featured-projects {
     text-align: center;
+  }
+}
+
+@media screen and (min-width: 691px) and (max-width: 768px) {
+  .featured-projects {
+    text-align: center;
+  }
+
+  .project {
+    width: 45%;
+    margin: 10px;
+    align-items: center;
+  }
+
+  .image {
+    width: 300px;
+    height: 300px;
+  }
+
+  .portfolio img {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: auto;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .container {
+    width: 800px;
+    margin: auto;
   }
 }
