--- a/Project 1B - Portfolio Site/css/style.css
+++ b/Project 1B - Portfolio Site/css/style.css
@@ -17,7 +17,8 @@
 
 .logo {
   width: 10%;
-  padding: 1em;
+  display: flex;
+  justify-content: center;
 }
 
 .logo > img {
@@ -29,7 +30,6 @@
   width: 70%;
   margin-right: 1em;
 }
-
 
 h1 {
   margin-bottom: 0;
@@ -119,7 +119,7 @@ a {
     margin: auto;
   }
 
-  .portfolio img {
+  .portfolio > img {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -139,7 +139,7 @@ a {
     height: 300px;
   }
 
-  .portfolio img {
+  .portfolio > img {
     align-items: center;
     margin: auto;
   }
@@ -165,7 +165,7 @@ a {
     height: 300px;
   }
 
-  .portfolio img {
+  .portfolio > img {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
