--- a/Project 1B - Portfolio Site/css/style.css
+++ b/Project 1B - Portfolio Site/css/style.css
@@ -12,7 +12,7 @@
   padding:0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .logo {
